Fix scss overflow problem

--- a/frontend/src/app/components/main-view/main-view.component.scss
+++ b/frontend/src/app/components/main-view/main-view.component.scss
@@ -1,6 +1,6 @@
 .root {
     height: 100%;
-    overflow-x: auto;
+    overflow: hidden;
 
     .navbar {
         display: flex;
@@ -62,7 +62,7 @@
             display: flex;
             justify-content: space-around;
             flex-grow: 1;
-            
+            overflow-x: auto;
 
             .sidebar {
                 display: flex;
@@ -73,6 +73,8 @@
                 border-radius: 10px;
                 background: rgba(white, 0.2);
                 margin-right: 25px;
+                height: 500px;
+                overflow-y: scroll;
 
                 .button {
                     width: 90%;
@@ -135,12 +137,15 @@
                     flex-basis: 0; //to force the columns to all be the same size, regardless of content
 
                     min-width: 350px;
-                    margin: 50px;
+                    margin: 20px 50px;
                     padding: 25px;
 
                     border-radius: 10px;
 
                     background: rgba(white, 0.2);
+
+                    overflow-y: scroll;
+                    max-height: 500px;
 
                     &:not(:first-child) {
                     margin-left: 0;
@@ -158,7 +163,6 @@
         }
     }    
 }
-
 
 app-new-task {
     margin-bottom: 30px;
